--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -5,7 +5,7 @@
   id="teams"
   class="grid h-auto grid-flow-row grid-cols-1 overflow-auto md:grid-cols-2 lg:grid-cols-3"
 >
-  <div *ngFor="let team of teams.reverse()">
+  <div *ngFor="let team of teams">
     <div class="m-2 shadow-md bg-cyan-200 shadow-cyan-600 rounded-xl">
       <div class="p-2 shadow-md bg-cyan-300 rounded-xl">
         <div class="flex w-full">
