--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -53,7 +53,9 @@
             </div>
             <div class="flex" *ngIf="!deleteConfirm">
               <a
-                class="w-1/6 m-2 text-center bg-red-300 shadow opacity-50 hover:shadow shadow-red-600 rounded-xl"
+                class="w-1/6 m-2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl"
+                [routerLink]="'score'"
+                [queryParams]="{ matchup: matchup._id | json }"
                 >Score</a
               >
               <a
