--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -36,7 +36,7 @@
                 <div
                   class="w-1/5 h-full p-1 text-xs font-semibold text-center bg-red-200 rounded-full shadow-inner shadow-red-600"
                 >
-                  {{ score(matchup.score) }}
+                  {{ score(matchup) }}
                 </div>
                 <div
                   class="w-1/5 h-full p-1 mx-1 text-xs font-semibold text-center bg-red-200 rounded-full shadow-inner shadow-red-600"
