add score header and overview sort by speed

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -4,16 +4,31 @@
     Pokemon DraftZone
   </div>
   <div class="w-2/3 p-4 overflow-y-auto rounded-lg shadow bg-slate-300 h-1/2">
-    <h1 class="pb-2 text-xl font-bold">News</h1>
-    <div>
-      <h2 class="text-lg font-semibold">February 29, 2024</h2>
-      <h3>
-        Welcome Pokemon Draftzone! I am thrilled to announce the launch of our
-        beta testing phase! Explore the site, share feedback, and report any
-        bugs you encounter to our
-        <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500">Discord</a
-        >. Lets work together to create the ultimate Pokemon Draft experience.
-      </h3>
-    </div>
+    <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
+    <ul class="space-y-3">
+      <li>
+        <h2 class="text-lg font-semibold">March 3rd, 2024</h2>
+        <h3>
+          Thank you everyone for this first round of feedback and bug reporting.
+          While there are still some bugs to be fixed, the major ones have been
+          squashed at this point. I also got the Score button working so you can
+          add the score, replay, pastes, and Pokémon statistics to each match.
+          While there's no way to view kill leaderboards right now, I plan on
+          adding it in the near future. Keep the feedback coming and thanks for
+          a great first weekend!
+        </h3>
+      </li>
+      <li>
+        <h2 class="text-lg font-semibold">February 29th, 2024</h2>
+        <h3>
+          Welcome Pokemon Draftzone! I am thrilled to announce the launch of our
+          beta testing phase! Explore the site, share feedback, and report any
+          bugs you encounter to our
+          <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500"
+            >Discord</a
+          >. Lets work together to create the ultimate Pokemon Draft experience.
+        </h3>
+      </li>
+    </ul>
   </div>
 </div>
