--- a/src/app/matchup-overview/matchup/overview/overview.component.html
+++ b/src/app/matchup-overview/matchup/overview/overview.component.html
@@ -14,7 +14,7 @@
           <th></th>
           <th></th>
           <th class="text-left">Name</th>
-          <th>{{ sortStat | uppercase }}</th>
+          <th>SPE</th>
         </tr>
         <tr
           *ngFor="let pokemon of teams[0].team"
@@ -53,7 +53,7 @@
         class="w-full border-4 table-auto border-slate-400"
       >
         <tr class="bg-slate-400">
-          <th>{{ sortStat | uppercase }}</th>
+          <th>SPE</th>
           <th class="text-right">Name</th>
           <th></th>
           <th></th>
