--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -24,7 +24,7 @@
         id="teams"
         class="grid h-auto grid-flow-row grid-cols-1 overflow-auto md:grid-cols-2 lg:grid-cols-3"
       >
-        <div *ngFor="let matchup of matchups.reverse(); let i = index">
+        <div *ngFor="let matchup of matchups; let i = index">
           <div class="m-2 bg-red-200 shadow-md shadow-red-600 rounded-xl">
             <div class="p-2 bg-red-300 shadow-md rounded-xl">
               <div class="flex w-full h-fit">
