planner tabs working

--- a/src/app/planner/typechart/typechart.component.html
+++ b/src/app/planner/typechart/typechart.component.html
@@ -1,9 +1,4 @@
-<div class="w-fit">
-  <div class="flex w-full px-1 bg-slate-400 rounded-t-xl">
-    <div class="flex w-full pb-1 border-b border-slate-300">
-      <h1 class="w-full text-xl font-bold text-center">Defensive Type Chart</h1>
-    </div>
-  </div>
+<div class="w-full">
   <table
     class="overflow-auto border-4 table-fixed bg-slate-100 touch-auto border-slate-400"
   >
@@ -108,5 +103,4 @@
       </tr>
     </tfoot>
   </table>
-  <div class="w-full h-3 rounded-b-full bg-slate-400"></div>
 </div>
