--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="myForm">
-  <div class="flex p-4 space-x-4 bg-slate-200">
+<form [formGroup]="plannerForm" class="h-full">
+  <div class="flex p-4 space-x-4 bg-slate-200 h-[10%]">
     <div>
       <label for="format">Format</label>
       <select formControlName="format" id="format">
@@ -30,47 +30,90 @@
 
     <div>
       <label for="tier">Tier</label>
-      <select formControlName="tier" id="tier">
+      <select formControlName="system">
         <option value="" disabled selected>Select Tier</option>
         <option value="points">Points</option>
         <option value="tiers">Tiers</option>
       </select>
     </div>
 
-    <div *ngIf="myForm.get('tier')?.value === 'points'">
+    <div *ngIf="isPoints">
       <label for="totalPoints">Total Points</label>
       <input type="number" formControlName="totalPoints" id="totalPoints" />
     </div>
   </div>
-  <div formArrayName="team">
-    <div
-      *ngFor="let teamCtrl of teamFormArray.controls; let i = index"
-      [formGroupName]="i"
-      class="flex"
-    >
-      <div>
-        <label for="name{{ i }}">Name</label>
-        <input type="text" formControlName="name" id="name{{ i }} " (input)="updateDetails()" />
-        <filter [query]="teamCtrl.get('name')?.value"
-        (querySelected)="resultSelected(teamCtrl, $event)"
-      ></filter>
+  <div class="flex h-[90%]">
+    <div class="w-1/4">
+      <div class="overflow-y-auto bg-red-200 h-2/3">
+        <div class="flex w-full">
+          <div class="w-1/8"></div>
+          <div class="w-1/2">Name</div>
+          <div class="w-1/4">Value</div>
+          <div class="w-1/8">Capt</div>
+        </div>
+        <div formArrayName="team" class="grid w-full grid-cols-1">
+          <div
+            *ngFor="let teamCtrl of teamFormArray.controls; let i = index"
+            [formGroupName]="i"
+            class="flex items-center space-x-2"
+          >
+            <div class="w-1/8 h-fit">
+              <sprite
+                [pokemon]="{
+                  pid: teamCtrl.get('pid')?.value,
+                  name: teamCtrl.get('name')?.value
+                }"
+              ></sprite>
+            </div>
+            <div class="w-1/2">
+              <input type="text" class="w-full" formControlName="name" />
+              <filter
+                [query]="teamCtrl.get('name')?.value"
+                (querySelected)="resultSelected(teamCtrl, $event)"
+              ></filter>
+            </div>
+            <div class="w-1/4" *ngIf="!isPoints">
+              <input type="text" class="w-full" formControlName="tier" />
+            </div>
+            <div class="w-1/4" *ngIf="isPoints">
+              <input type="number" class="w-full" formControlName="value" />
+            </div>
+            <div class="w-1/8">
+              <input type="checkbox" class="w-full" formControlName="capt" />
+            </div>
+          </div>
+        </div>
       </div>
-      
-      <div>
-        <label for="tier{{ i }}">Tier</label>
-        <input type="tier" formControlName="tier" id="tier{{ i }}" />
+      <div class="h-1/3 bg-emerald-200">
+        <div>Points remaining: {{ remainingPoints }}</div>
+        <div>
+          Average points
+          {{ remainingPoints / remainingPokemon | number : "1.0-2" }}
+        </div>
       </div>
-      <div>
-        <label for="capt{{ i }}">Capt</label>
-        <input type="checkbox" formControlName="capt" id="capt{{ i }}" />
+    </div>
+    <div class="w-3/4">
+      <div class="flex w-full h-[10%] bg-cyan-300">
+        <div class="p-2" (click)="tabSelected = 0">Summery</div>
+        <div class="p-2" (click)="tabSelected = 1">Typechart</div>
+        <div class="p-2" (click)="tabSelected = 2">Moves</div>
+        <div class="p-2" (click)="tabSelected = 3">Find</div>
+      </div>
+      <div class="w-full bg-yellow-200 h-[90%]">
+        <typechart
+          class="h-full"
+          *ngIf="tabSelected == 1 && typechart"
+          [typechart]="typechart"
+        ></typechart>
+        <summary
+          class="list-none"
+          *ngIf="tabSelected == 0 && summary"
+          [summary]="summary"
+        ></summary>
       </div>
     </div>
   </div>
-  <div class="flex">
-    <typechart *ngIf="typechart" [typechart]="typechart"></typechart>
-    <summary *ngIf="summary" [summary]="summary"></summary>
-  </div>
 </form>
-{{ myForm.value | json }}
+{{ plannerForm.value | json }}
 <!-- Typechart include multi Type Pokemon Settings Settings List Pokemon Move chart
 Recommended Pokemon Pokemon summary -->
