--- a/src/app/planner/summary/summary.component.html
+++ b/src/app/planner/summary/summary.component.html
@@ -1,10 +1,4 @@
 <div class="w-fit">
-  <div class="flex w-full px-1 bg-slate-400 rounded-t-xl">
-    <div class="flex w-full pb-1 border-b border-slate-300">
-      <h1 class="w-full text-xl font-bold text-center">Team Overview</h1>
-    </div>
-  </div>
-
   <table
     id="myOverview"
     class="w-full border-4 rounded-md table-auto border-slate-400 bg-cyan-400"
@@ -20,7 +14,6 @@
         <div *ngIf="sortBy == 'name' && !reversed">Name ↥</div>
         <div *ngIf="sortBy == 'name' && reversed">Name ↧</div>
       </th>
-      <th class="w-16 text-left">Types</th>
       <th class="w-24">Abilities</th>
 
       <th
@@ -92,15 +85,17 @@
       <td>
         <sprite [pokemon]="pokemon"></sprite>
       </td>
-      <td class="text-sm">{{ pokemon.name }}</td>
-      <td>
-        <img
-          *ngFor="let type of pokemon.types"
-          src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
-          alt="{{ type }}"
-        />
-      </td>
+      <td class="flex flex-col h-full text-sm">
+        <div class="h-1/2">{{ pokemon.name }}</div>
 
+        <div class="flex justify-center space-x-2 h-1/2">
+          <img
+            *ngFor="let type of pokemon.types"
+            src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
+            alt="{{ type }}"
+          />
+        </div>
+      </td>
       <td>
         <div *ngFor="let ability of pokemon.abilities" class="text-center">
           {{ ability }}
@@ -129,7 +124,6 @@
       </td>
     </tr>
     <tr class="border-t-2 bg-slate-300 border-slate-400">
-      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -167,7 +161,6 @@
           class="w-8 bg-transparent"
         />
       </td>
-      <td></td>
       <td class="text-center">Median</td>
       <td class="text-center" [ngClass]="statColor(summary.stats.median.hp)">
         {{ summary.stats.median.hp }}
@@ -192,7 +185,6 @@
       <td></td>
       <td></td>
       <td></td>
-      <td></td>
       <td class="text-center">Max</td>
       <td class="text-center" [ngClass]="statColor(summary.stats.max.hp)">
         {{ summary.stats.max.hp }}
@@ -214,5 +206,4 @@
       </td>
     </tr>
   </table>
-  <div class="w-full h-3 rounded-b-full bg-slate-400"></div>
 </div>
